# ModelViewer

./: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: main.c  main.cpp  shader.cpp  shader.h
